qqwing-wrapper: seed RNG

So we don't repeat same puzzles each time Sudoku is started.

Credit to Yuri Khan for discovering and debugging this issue (and for
submitting a different fix).

https://bugzilla.gnome.org/show_bug.cgi?id=768345