lib/qqwing-wrapper.cpp
@@ -22,7 +22,9 @@
 #include "qqwing-wrapper.h"
 
 #include <algorithm>
+#include <cstdlib>
 #include <iostream>
+#include <mutex>
 
 #include <glib.h>
 #include <qqwing.hpp>
@@ -37,6 +39,11 @@ int* qqwing_generate_puzzle(int difficulty)
     const int MAX_ITERATIONS = 1000;
     const int BOARD_SIZE = 81;
     qqwing::SudokuBoard board;
+    std::once_flag flag;
+
+    std::call_once(flag, [] {
+        srand(time(nullptr));
+    });
 
     board.setRecordHistory(true);
     board.setLogHistory(false);
